--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.0.11",
     "axios": "^1.3.5",
     "clsx": "^1.2.1",
+    "cookie": "^0.5.0",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "framer-motion": "^10.11.2",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/cookie": "^0.5.1",
     "@types/jest": "^29.5.0",
     "autoprefixer": "^10.4.14",
     "jest": "^29.5.0",
